<resources>
    <string name="app_name">Alakazoum</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next fragment</string>
    <string name="previous">Previous fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txtFragment">"Hello Kotlin :) "</string>
    <string name="toast_short_message">This is a short message in a toast</string>
    <string name="naviguate">Naviguate</string>
    <string name="display_toast">Display a short message</string>
    <string name="display_toast_long">Display a long message</string>
    <string name="toast_long_message">This a message in long toast</string>
    <string name="dialog_message">This a message in an alert dialog</string>
    <string name="dialog_validate">Valider le contenu</string>
    <string name="toast_cloe_dialog">You closed the alert dialog</string>
    <string name="open_dialog_text">Open url</string>
    <string name="title_send_email">Title Email</string>
    <string name="toast_error_send_email">An error occured. Please try again later.</string>
    <string name="display_dialog_message">Open a dialog</string>
    <string name="share_application_text">You like the application ? Share it !</string>
    <string name="text_share">Thanks to share our application</string>
    <string name="title_share">Share</string>
    <string name="start_activity_text">Open a new activity</string>
    <string name="title_activity_secondary">SecondaryActivity</string>
    <string name="receive_notification_text">Take the notification</string>
    <string name="old_device_message">Sorry, your device is to old to support this feature.</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="back">Back to first fragment</string>
    <string name="label_sound">Sound</string>
    <string name="pref_sound">PREF_SOUND</string>
</resources>