<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/display_short_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_toast"
        app:layout_constraintBottom_toTopOf="@id/display_long_message_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <Button
        android:id="@+id/display_long_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_toast_long"
        app:layout_constraintBottom_toTopOf="@id/open_dialog_button"
        app:layout_constraintTop_toTopOf="@id/display_short_message_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/open_dialog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_dialog_message"
        app:layout_constraintBottom_toTopOf="@id/textview_first"
        app:layout_constraintTop_toTopOf="@id/display_long_message_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/naviguate_fragment_button"
        app:layout_constraintTop_toBottomOf="@id/open_dialog_button"
         />

    <Button
        android:id="@+id/naviguate_fragment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naviguate"

        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
       />
</androidx.constraintlayout.widget.ConstraintLayout>